<resources>
    <string name="app_name">PomoTrack</string>

    <string name="welcome_slogan">Verimliliğini PomoTrack ile arttır</string>
    <string name="welcome_button">İlerle</string>

    <string name="home_slogan">Güne odağını toparlayarak başla</string>
    <string name="progress_title">İlerlemeni takip et</string>
    <string name="start_new_task">Yeni bir görev ayarla</string>

</resources>