<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:paddingHorizontal="24dp"
    android:paddingTop="40dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_slogan"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/welcome_splash"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/welcome_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_welcome_button"
        android:text="@string/welcome_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"/>

</LinearLayout>